<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"

    android:orientation="vertical"
    android:background="@color/background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        >

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="7"
            android:id="@+id/edtHeight"
            android:backgroundTint="@color/txtTint"
            android:hint="@string/feet"
            android:textSize="20dp"
            android:inputType="number"
            />

        <EditText
            android:id="@+id/edtIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/txtTint"
            android:ems="7"
            android:hint="@string/inh"
            android:layout_marginLeft="15dp"
            android:inputType="number"
            android:textSize="20dp"
            />



    </LinearLayout>


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="15dp"
        android:ems="7"
        android:text="@string/txt_hint"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/edtWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:hint="@string/wgt"
        android:textSize="20dp"
        android:backgroundTint="@color/txtTint"
        android:inputType="number"
        android:ems="7"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/txt_hint2"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cal_bmi"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:ems="9"
        android:textSize="25dp"
        android:background="@drawable/btn_background"
        android:textColor="@color/black"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnReset"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="Reset"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@drawable/back"
        android:textSize="25dp"/>



    <LinearLayout
        android:id="@+id/llResult"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/layout_background"
        android:layout_margin="20dp">


        <TextView
            android:id="@+id/txtResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:layout_margin="15dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
    </LinearLayout>







</LinearLayout>






